# spotuify

./: Cargo.toml  README.md
src/: entities.rs  main.rs
src/app/: mod.rs
src/client/: mod.rs
src/entities/: mod.rs
src/inputs/: events.rs  mod.rs
src/ui/: mod.rs  render.rs
