[package]
name = "spotuify"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
dotenv = "0.15.0"
rspotify = "0.11.6"
tokio = { version = "1.23.0", features = ["full"] }
tui = "0.19.0"
